--- a/angular.json
+++ b/angular.json
@@ -72,10 +72,12 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "srl-new:build:production"
+              "browserTarget": "srl-new:build:production",
+              "proxyConfig": "proxy.config.json"
             },
             "development": {
-              "browserTarget": "srl-new:build:development"
+              "browserTarget": "srl-new:build:development",
+              "proxyConfig": "proxy.config.json"
             }
           },
           "defaultConfiguration": "development"
