--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --configuration production",
+    "start": "ng serve --proxy-config proxy.config.json -o --configuration production",
     "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
